exercises/31-kctl-ing-create/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dumpster-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
  labels:
    workshop: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/v1"
        backend:
          service:
            name: svc-v1
            port:
              number: 8080
